--- a/public/style.css
+++ b/public/style.css
@@ -95,7 +95,7 @@ h2 {
 
 h2:before,
 h2:after {
-	content: "";
+	content: '';
 	flex-grow: 1;
 	border-bottom: 0.5px solid;
 	margin-bottom: 1.2ex;
@@ -115,12 +115,12 @@ textarea {
 	border-radius: 4px;
 }
 
-input[type="text"] {
+input[type='text'] {
 	border-radius: 4px;
 	border: 0.5px solid;
 }
 
-input[type="text"],
+input[type='text'],
 textarea {
 	background: #153d2088;
 	margin: 0;
@@ -131,7 +131,7 @@ textarea {
 }
 
 textarea:focus,
-input[type="text"]:focus {
+input[type='text']:focus {
 	background: var(--dark-green);
 }
 
@@ -146,7 +146,7 @@ ul {
 }
 
 ul li::before {
-	content: "→ ";
+	content: '→ ';
 	position: absolute;
 	margin-left: -1.5em;
 }
